objects/ExportToCSV__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode2__c</fullName>
        <formula>currencyCode__c</formula>
        <label>CurrencyCode2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdBuilding__c</fullName>
        <label>IdBuilding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdaOrder__c</fullName>
        <label>OdaOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceID__c</fullName>
        <label>ResourceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuspendDate__c</fullName>
        <label>SuspendDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI__c</fullName>
        <label>UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionCode__c</fullName>
        <label>actionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalFee__c</fullName>
        <label>additionalFee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addserviceId__c</fullName>
        <label>addserviceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agreementCode__c</fullName>
        <label>agreementCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altExpectedDate2__c</fullName>
        <formula>altExpectedDate__c</formula>
        <label>altExpectedDate2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altExpectedDate__c</fullName>
        <label>altExpectedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altOrderDate__c</fullName>
        <label>altOrderDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apparatusType__c</fullName>
        <label>apparatusType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingEndDate__c</fullName>
        <label>billingEndDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingStartDate__c</fullName>
        <label>billingStartDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calendartypeCode__c</fullName>
        <label>calendartypeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cashFlow__c</fullName>
        <label>cashFlow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargePeriod__c</fullName>
        <label>chargePeriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codeComunicationOLO__c</fullName>
        <label>codeComunicationOLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codeIav__c</fullName>
        <label>codeIav</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codeOperationalAgreement__c</fullName>
        <label>codeOperationalAgreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codeOrderOLO__c</fullName>
        <label>codeOrderOLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>connectiontype__c</fullName>
        <label>connectiontype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currencyCode__c</fullName>
        <label>currencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>descIav__c</fullName>
        <label>descIav</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>durationService__c</fullName>
        <label>durationService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>executionActivity__c</fullName>
        <label>executionActivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expectedDate2__c</fullName>
        <formula>expectedDate__c</formula>
        <label>expectedDate2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expectedDate__c</fullName>
        <label>expectedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flagPromotionAchieved__c</fullName>
        <label>flagPromotionAchieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>franchiseCode__c</fullName>
        <label>franchiseCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installmentInd__c</fullName>
        <label>installmentInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niNumber__c</fullName>
        <label>niNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offerTypeCode__c</fullName>
        <label>offerTypeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderDate__c</fullName>
        <label>orderDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderTypeCode__c</fullName>
        <label>orderTypeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overrideReasonCode__c</fullName>
        <label>overrideReasonCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pclassCode__c</fullName>
        <label>pclassCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pqtyunitCode__c</fullName>
        <label>pqtyunitCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priceCode__c</fullName>
        <label>priceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priceId__c</fullName>
        <label>priceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productCode__c</fullName>
        <label>productCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productStatus__c</fullName>
        <label>productStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promotionCode__c</fullName>
        <label>promotionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promotionTarget__c</fullName>
        <label>promotionTarget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psourceOrdnum__c</fullName>
        <label>psourceOrdnum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchaseOrderNo__c</fullName>
        <label>purchaseOrderNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quantity2__c</fullName>
        <formula>quantity__c</formula>
        <label>quantity2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reasonCode__c</fullName>
        <label>reasonCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reasonDescription__c</fullName>
        <label>reasonDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reportunEarnedInd__c</fullName>
        <label>reportunEarnedInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seqNo__c</fullName>
        <label>seqNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceOrditemNum__c</fullName>
        <label>sourceOrditemNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceOrdnum__c</fullName>
        <label>sourceOrdnum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourcePrevserviceNumber__c</fullName>
        <label>sourcePrevserviceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourcePricetypeCode__c</fullName>
        <label>sourcePricetypeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceServiceNumber__c</fullName>
        <label>sourceServiceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceSystemCode__c</fullName>
        <label>sourceSystemCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staircaiseIdOF__c</fullName>
        <label>staircaiseIdOF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staircaiseId__c</fullName>
        <label>staircaiseId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statementDirection__c</fullName>
        <label>statementDirection</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetNumber__c</fullName>
        <label>streetNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemServiceId__c</fullName>
        <label>systemServiceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technicalNum__c</fullName>
        <label>technicalNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>toponymyParticle__c</fullName>
        <label>toponymyParticle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttNumber__c</fullName>
        <label>ttNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>verticalOperator__c</fullName>
        <label>verticalOperator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wcrmId__c</fullName>
        <label>wcrmId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ExportToCSV</label>
    <nameField>
        <label>ExportOP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExportsToCSV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>